# OfficeX-an-AI-agents-for-doc

./: .gitignore  AGENTS.md  BOUNDARY.md  CONSTITUTION.md  LICENSE  MANIFEST.in  PROJECT.md  README.md  README_CN.md  ROADMAP.md  pyproject.toml  requirements.lock.txt
desktop/: README.md  electron.vite.config.ts  package.json  tsconfig.node.json  tsconfig.web.json
docs/: ACTIVE_RULES_AND_PATHS.md  ARCHITECTURE.md  CHALLENGE_PROTOCOL.md  CODEBASE_INDEX_MODEL.md  CONSTRAINT_INDEX.md  ENGINEERING_ISSUES_REGISTER.md  MULTI_AGENT_PROMPTS.md  MULTI_AGENT_WORKFLOW.md  OPEN_SOURCE_EDITOR_EVALUATION.md  PACKAGE_CONTRACT.md  PRODUCT_ROADMAP.md  REVIEW_ANCHOR_PROTOCOL.md  TEMPLATE_CONTRACT.md  TEMPLATE_STYLE_CONTRACT.md  TRACE_INDEX_MODEL.md  VISUAL_AUDIT_REQUIREMENTS.md  WORKFLOW_OPERATING_MODEL.md  WRITE_CONTRACT.md
harnesses/: INDEX.md  asset_binding.md  compliance_review.md  document_generation.md  document_ingestion.md  document_revision.md  publication_release.md  render_audit.md  template_alignment.md
manifests/: agent_catalog.yml  baseline.yml  citations.yml  figures.yml  harness_catalog.yml  layout_rules.yml  memory_index_policy.yml  navigation_catalog.yml  provider_catalog.yml  reference_catalog.yml  resume_bootstrap.yml  sections.yml  snippets.yml  template_profile.yml  write_contract.yml
officex/: __init__.py
prompts/: OFFICEX_COGNITION.md  ORCHESTRATOR.md  PATCH_ENGINEER.md  STYLE_LAYOUT_ENGINEER.md  TEMPLATE_ANALYST.md  TEST_AUDITOR.md  VALIDATION_ENGINEER.md
sandboxes/: README.md
skills/: SKILL.md
sources/: complex_report_outline.yml  example_outline.yml  minimal_build.yml
tests/: __init__.py  officex_exec_fixtures.py  test_artifact_integrity.py  test_candidate_audit.py  test_cli.py  test_criteria_runtime.py  test_doctor_runtime.py  test_docx_inspector.py  test_font_audit.py  test_golden_path.py  test_manifest_loader.py  test_officex_runtime_cli.py  test_officex_runtime_length_profiles.py  test_outline_audit.py  test_package_integrity.py  test_patch_bridge_runtime.py  test_product_common.py  test_product_entry.py  test_prompt_runtime.py  test_provider_adapter.py  test_provider_runtime.py  test_publication.py  test_render_boundary_runtime.py  test_review_runtime.py  test_runtime_surface_cli.py  test_section_assembler.py  test_semantic_validation.py  test_snippet_audit.py  test_snippet_compiler.py  test_trace_indexer.py  test_validation.py  test_writer.py
tools/: __init__.py
trace/: CHECKPOINT_01.md  CHECKPOINT_02.md  CHECKPOINT_03.md  CHECKPOINT_04.md  CHECKPOINT_05.md  CHECKPOINT_06.md  CHECKPOINT_07.md  CHECKPOINT_08.md  CHECKPOINT_09.md  CHECKPOINT_10.md  CHECKPOINT_11.md  CHECKPOINT_12.md  CHECKPOINT_13.md  CHECKPOINT_14.md  CHECKPOINT_15.md  CHECKPOINT_16.md  INDEX.md  (+17 more)
(+174 files in other folders)
